refactor MoviesFragment.java to PopularMoviesFragment now every api call will hav its own fragment

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -36,7 +36,7 @@
                 <item
                         android:id="@+id/nav_main_movies"
                         android:icon="@drawable/movie_ic"
-                        android:title="@string/movies_nav"/>
+                        android:title="@string/movies_main_nav"/>
 
                 <item
                         android:id="@+id/nav_tv"
