--- a/app/src/main/res/layout/fragment_movies_main.xml
+++ b/app/src/main/res/layout/fragment_movies_main.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical">
 
     <com.google.android.material.tabs.TabLayout
             android:id="@+id/movies_tab_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             app:tabMode="scrollable"/>
 
     <androidx.viewpager2.widget.ViewPager2
@@ -15,4 +16,4 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
