--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -51,17 +51,17 @@
             android:id="@+id/nav_main_movies"
             android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.movies.MoviesMainFragment"
             tools:layout="@layout/fragment_movies_main"
-            android:label="@string/movies_main_nav" />
+            android:label="@string/movies_main_nav" >
+        <action
+                android:id="@+id/action_nav_main_movies_to_nav_single_movie"
+                app:destination="@id/nav_single_movie" />
+    </fragment>
 
     <fragment
             android:id="@+id/nav_popular_movies"
             android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.movies.PopularMoviesFragment"
             android:label="@string/popular_movies_nav"
-            tools:layout="@layout/fragment_popular_movies">
-        <action
-                android:id="@+id/action_nav_popular_movies_to_nav_single_movie"
-                app:destination="@id/nav_single_movie" />
-    </fragment>
+            tools:layout="@layout/fragment_popular_movies"/>
 
     <fragment
             android:id="@+id/nav_top_rated_movies"
