--- a/app/src/main/res/layout/fragment_boxoffice_movies.xml
+++ b/app/src/main/res/layout/fragment_boxoffice_movies.xml
@@ -5,14 +5,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:id="@+id/popular_movies_refresh_view">
+        android:id="@+id/boxoffice_movies_refresh_view">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.SearchView
-                android:id="@+id/popular_movies_search_view"
+                android:id="@+id/boxoffice_movies_search_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -21,12 +21,12 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/popular_movies_rv"
+                android:id="@+id/boxoffice_movies_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/popular_movies_search_view" />
+                app:layout_constraintTop_toBottomOf="@+id/boxoffice_movies_search_view" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
