--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,23 +9,25 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginStart="@dimen/edit_text_margin"
-            android:layout_marginEnd="@dimen/edit_text_margin">
+            android:orientation="vertical">
 
         <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="300dp"
                 android:src="@mipmap/my_logo_foreground"
-                android:scaleType="centerCrop"
-                android:layout_marginTop="@dimen/logo_top"/>
+                android:scaleType="centerCrop"/>
 
         <TextView
-                android:id="@+id/text_home"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="viewStart"
-                android:text="@string/home_text"
+                android:layout_marginTop="@dimen/edit_text_margin"
+                android:text="@string/trending"
+                android:gravity="center"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/trending_rv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/edit_text_margin"/>
 
     </LinearLayout>
