--- a/app/src/main/res/layout/fragment_single_movie.xml
+++ b/app/src/main/res/layout/fragment_single_movie.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -19,22 +18,14 @@
                 android:gravity="center"
                 android:layout_margin="@dimen/edit_text_margin" />
 
-        <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
+        <ImageView
+                android:id="@+id/single_movie_image"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/edit_text_margin"
-                android:layout_marginEnd="@dimen/edit_text_margin"
-                app:cardCornerRadius="5dp"
-                android:layout_gravity="center">
-
-            <ImageView
-                    android:id="@+id/single_movie_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/mog_log_background"
-                    android:contentDescription="@string/movie_image_desc" />
-
-        </androidx.cardview.widget.CardView>
+                android:src="@drawable/mog_log_background"
+                android:contentDescription="@string/movie_image_desc"
+                android:layout_gravity="center"
+                android:minHeight="500dp" />
 
         <LinearLayout
                 android:layout_width="match_parent"
