--- a/app/src/main/res/layout/fragment_single_tv_show.xml
+++ b/app/src/main/res/layout/fragment_single_tv_show.xml
@@ -18,22 +18,14 @@
                 android:gravity="center"
                 android:layout_margin="@dimen/edit_text_margin" />
 
-        <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/edit_text_margin"
-                android:layout_marginEnd="@dimen/edit_text_margin"
-                app:cardCornerRadius="5dp"
-                android:layout_gravity="center">
-
             <ImageView
                     android:id="@+id/single_tv_image"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@drawable/mog_log_background"
-                    android:contentDescription="@string/movie_image_desc" />
-
-        </androidx.cardview.widget.CardView>
+                    android:contentDescription="@string/movie_image_desc"
+                    android:layout_gravity="center"
+                    android:minHeight="500dp" />
 
         <LinearLayout
                 android:layout_width="match_parent"
