--- a/app/src/main/res/layout/fragment_top_rated_movies.xml
+++ b/app/src/main/res/layout/fragment_top_rated_movies.xml
@@ -7,27 +7,10 @@
         android:orientation="vertical"
         android:id="@+id/to_rated_movies_refresh_view">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        <androidx.appcompat.widget.SearchView
-                android:id="@+id/top_rated_movies_search_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/top_rated_movies_rv"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/top_rated_movies_search_view" />
+                android:layout_height="wrap_content"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
