--- a/app/src/main/res/layout/fragment_upcoming_movies.xml
+++ b/app/src/main/res/layout/fragment_upcoming_movies.xml
@@ -7,27 +7,9 @@
         android:orientation="vertical"
         android:id="@+id/upcoming_movies_refresh_view">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/upcoming_movies_rv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        <androidx.appcompat.widget.SearchView
-                android:id="@+id/upcoming_movies_search_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-
-        <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/upcoming_movies_rv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/upcoming_movies_search_view" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="wrap_content" />
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
