--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -44,6 +44,11 @@
                         android:title="@string/tv_show_nav"/>
 
                 <item
+                        android:id="@+id/nav_games"
+                        android:icon="@drawable/games_ic"
+                        android:title="@string/game_nave"/>
+
+                <item
                         android:id="@+id/nav_about"
                         android:icon="@drawable/about_ic"
                         android:title="@string/about_nav" />
