--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -198,4 +198,12 @@
                 android:defaultValue="default" />
     </fragment>
 
+    <!--Games-->
+
+    <fragment
+            android:id="@+id/nav_games"
+            android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.games.MainGamesFragment"
+            android:label="@string/game_nave"
+            tools:layout="@layout/fragment_games_main"/>
+
 </navigation>
