--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -204,6 +204,21 @@
             android:id="@+id/nav_games"
             android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.games.MainGamesFragment"
             android:label="@string/game_nave"
-            tools:layout="@layout/fragment_games_main"/>
+            tools:layout="@layout/fragment_games_main">
+        <action
+                android:id="@+id/action_nav_games_to_single_free_to_play_nav"
+                app:destination="@id/single_free_to_play_nav" />
+    </fragment>
+
+    <fragment
+            android:id="@+id/single_free_to_play_nav"
+            android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.games.SingleFreeToPlayGameFragment"
+            android:label="@string/single_free_game_nave"
+            tools:layout="@layout/fragment_single_free_to_play_game">
+        <argument
+                android:name="free_to_play_id"
+                app:argType="string"
+                android:defaultValue="default" />
+    </fragment>
 
 </navigation>
