--- a/app/src/main/res/layout/fragment_single_free_to_play_game.xml
+++ b/app/src/main/res/layout/fragment_single_free_to_play_game.xml
@@ -15,8 +15,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/home_text"
                 android:textSize="35sp"
-                android:gravity="center"
-                android:layout_margin="@dimen/edit_text_top_margin"/>
+                android:gravity="center" />
 
         <ImageView
                 android:id="@+id/single_free_to_play_poster"
@@ -24,40 +23,61 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/mog_log_background"
                 android:layout_gravity="center"
-                android:minHeight="500dp"/>
+                android:minHeight="500dp" />
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="" />
 
         <TextView
                 android:id="@+id/free_to_play_release_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/home_text"/>
+                android:text="@string/release_date" />
 
         <TextView
                 android:id="@+id/free_to_play_short_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/home_text"
-                android:layout_marginTop="@dimen/edit_text_margin"/>
+                android:text="@string/home_text" />
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/game_url"
+                android:layout_marginTop="@dimen/edit_text_margin" />
 
         <TextView
                 android:id="@+id/free_to_play_game_url"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/home_text"
-                android:layout_marginTop="@dimen/edit_text_margin"/>
+                android:text="@string/home_text" />
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/edit_text_margin"
+                android:text="@string/screen_shots"
+                android:textSize="25sp" />
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/free_to_play_screen_shots_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="@dimen/edit_text_margin"/>
+                android:orientation="horizontal" />
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/description"
+                android:textSize="25sp" />
 
         <TextView
                 android:id="@+id/free_to_play_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/home_text"/>
+                android:text="@string/home_text" />
 
         <LinearLayout
                 android:layout_width="match_parent"
@@ -66,18 +86,37 @@
                 android:layout_marginTop="@dimen/edit_text_top_margin">
 
             <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/status" />
+
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/game_genre" />
+
+        </LinearLayout>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+            <TextView
                     android:id="@+id/free_to_play_status"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/home_text"/>
+                    android:text="@string/home_text" />
 
             <TextView
                     android:id="@+id/free_to_play_genre"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/home_text"/>
+                    android:text="@string/home_text" />
 
         </LinearLayout>
 
@@ -88,18 +127,37 @@
                 android:layout_marginTop="@dimen/edit_text_top_margin">
 
             <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/platform" />
+
+            <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/publisher" />
+
+        </LinearLayout>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+            <TextView
                     android:id="@+id/free_to_play_platform"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/home_text"/>
+                    android:text="@string/home_text" />
 
             <TextView
                     android:id="@+id/free_to_play_publisher"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/home_text"/>
+                    android:text="@string/home_text" />
 
         </LinearLayout>
 
@@ -108,64 +166,73 @@
                 android:layout_height="wrap_content"
                 android:text="@string/minimum_system_requirements"
                 android:layout_marginTop="@dimen/edit_text_margin"
-                android:textSize="25sp"/>
+                android:textSize="25sp" />
 
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-            <LinearLayout
+            <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="@dimen/edit_text_margin">
+                    android:text="@string/os"
+                    android:layout_marginTop="@dimen/edit_text_margin" />
 
-                <TextView
-                        android:id="@+id/free_to_play_os"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/home_text"/>
+            <TextView
+                    android:id="@+id/free_to_play_os"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/home_text" />
 
-                <TextView
-                        android:id="@+id/free_to_play_processor"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/home_text"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/processor"
+                    android:layout_marginTop="@dimen/edit_text_margin" />
 
+            <TextView
+                    android:id="@+id/free_to_play_processor"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/home_text" />
 
-            </LinearLayout>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/graphics"
+                    android:layout_marginTop="@dimen/edit_text_margin" />
 
             <TextView
                     android:id="@+id/free_to_play_graphics"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/home_text"
-                    android:layout_marginTop="@dimen/edit_text_margin"/>
+                    android:text="@string/home_text" />
 
-            <LinearLayout
+            <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="@dimen/edit_text_margin">
+                    android:text="@string/memory"
+                    android:layout_marginTop="@dimen/edit_text_margin" />
 
-                <TextView
-                        android:id="@+id/free_to_play_memory"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/home_text"/>
+            <TextView
+                    android:id="@+id/free_to_play_memory"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/home_text" />
 
-                <TextView
-                        android:id="@+id/free_to_play_storage"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/home_text"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/storage"
+                    android:layout_marginTop="@dimen/edit_text_margin" />
 
-            </LinearLayout>
+            <TextView
+                    android:id="@+id/free_to_play_storage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/home_text"
+                    android:layout_marginBottom="@dimen/edit_text_margin"/>
 
         </LinearLayout>
 
