--- a/app/src/main/res/layout/tv_network_item.xml
+++ b/app/src/main/res/layout/tv_network_item.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_marginStart="@dimen/edit_text_margin"
-        android:layout_marginTop="@dimen/edit_text_margin">
+        android:layout_marginTop="@dimen/edit_text_margin"
+        android:layout_marginEnd="@dimen/edit_text_margin">
 
     <TextView
             android:id="@+id/tv_network_name"
-            android:layout_width="0dp"
-            android:layout_weight="2"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
@@ -17,9 +17,9 @@
 
     <ImageView
             android:id="@+id/tv_network_logo"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/mog_log_background"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/mog_log_background"
+            android:minHeight="250dp"/>
 
 </LinearLayout>
