--- a/app/src/main/res/layout/games_item.xml
+++ b/app/src/main/res/layout/games_item.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
     <ImageView
             android:id="@+id/game_poster"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/mog_log_background"/>
-
+            android:layout_height="wrap_content"
+            android:src="@drawable/mog_log_background" />
+<!--
     <TextView
             android:id="@+id/game_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/home_text"
-            android:textSize="50sp"/>
+            android:textSize="50sp"/>-->
 
 </LinearLayout>
