--- a/app/src/main/res/layout/games_item.xml
+++ b/app/src/main/res/layout/games_item.xml
@@ -2,19 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginBottom="@dimen/edit_text_margin">
+
+        <TextView
+                android:id="@+id/game_name"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/home_text"
+                android:textSize="30sp"
+                android:gravity="center"/>
 
     <ImageView
             android:id="@+id/game_poster"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/mog_log_background" />
-<!--
-    <TextView
-            android:id="@+id/game_name"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/home_text"
-            android:textSize="50sp"/>-->
+            android:src="@drawable/mog_log_background"
+            android:layout_marginTop="@dimen/edit_text_margin"/>
 
 </LinearLayout>
