--- a/app/src/main/res/layout/fragment_all_games.xml
+++ b/app/src/main/res/layout/fragment_all_games.xml
@@ -7,7 +7,6 @@
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/all_games_rv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clickable="false"/>
+            android:layout_height="wrap_content"/>
 
 </LinearLayout>
