--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,9 +8,11 @@
     <!--settings-->
     <fragment
             android:id="@+id/nav_settings"
-            android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.settings.SettingsViewFragment"
+            android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.settings.SettingFragment"
             android:label="@string/action_settings"
-            tools:layout="@layout/fragment_settings_view"/>
+            tools:layout="@layout/fragment_settings"/>
+
+    <!--home-->
 
     <fragment
             android:id="@+id/nav_home"
@@ -18,6 +20,14 @@
             android:label="@string/menu_home"
             tools:layout="@layout/fragment_home" />
 
+    <!--about-->
+    <fragment
+            android:id="@+id/nav_about"
+            android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.about.AboutFragment"
+            android:label="@string/about_nav"
+            tools:layout="@layout/fragment_about" />
+
+    <!--account-->
     <fragment
             android:id="@+id/nav_create_account"
             android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.create_account.CreateAccountFragment"
@@ -29,12 +39,6 @@
             android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.login.LoginFragment"
             android:label="@string/login"
             tools:layout="@layout/fragment_login" />
-
-    <fragment
-            android:id="@+id/nav_about"
-            android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.about.AboutFragment"
-            android:label="@string/about_nav"
-            tools:layout="@layout/fragment_about" />
 
     <fragment
             android:id="@+id/nav_my_profile"
